--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id="header">
-            <h1>Today is Ngee's birthday 🎉</h1>
+            <h1>Today is Ngia's birthday 🎉</h1>
             <img id="bff-img" src="images/Ngee.jpg">
             <h2 id="bday-age">22 years old</h2>
             <h4 id="bday-date">28.01.2023</h4>
